First successful test code with parsed text file.
Signed-off-by: Robert Hieger <rhieger@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "CSS-Grid"
   ],
   "author": "Robert Hieger",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jshint": "^2.11.0"
+  }
 }
